Modernize JavaScript to ES6+ syntax, align CLI/API docs with user journey order, other minor fixes and improvements

--- a/src/pbir_utils/static/css/wireframe.css
+++ b/src/pbir_utils/static/css/wireframe.css
@@ -816,6 +816,11 @@
             font-size: 14px;
         }
 
+        .pbir-wireframe .fields-pane-toggle svg {
+            width: 10px;
+            height: 10px;
+        }
+
         .pbir-wireframe .fields-pane-toggle.resizing {
             transition: none;
         }
